--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: RudeOps
-subtitle: C'est ici que vous trouvez ce qu'on écrit dans notre newsletter
+subtitle: C'est ici que vous retrouvez ce qu'on écrit dans notre newsletter
 ---
