--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: RudeOps
 subtitle: C'est ici que vous retrouvez ce qu'on écrit dans notre newsletter
 ---
 
+<!-- MailerLite Universal -->
 <script>
     (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
     .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
@@ -11,3 +12,6 @@ subtitle: C'est ici que vous retrouvez ce qu'on écrit dans notre newsletter
     (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
     ml('account', '325165');
 </script>
+<!-- End MailerLite Universal -->
+
+<div class="ml-embedded" data-form="LWS2bM"></div>
