switch archives 2 lp

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
-layout: home
-title: RudeOps
-subtitle: C'est ici que vous retrouvez ce qu'on écrit dans notre newsletter
+layout: page
+title: RudeOps.com
+subtitle: La veille techno made in France dédiée à la tech en général et au devops en particulier.
 ---
+
+<img src="https://storage.mlcdn.com/account_image/325165/2dfoIsCps61pV9pYm6xnuqnd6t0mWMpRKkrR7gu3.jpg"><br>
 
 <!-- MailerLite Universal -->
 <script>
